--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -1,38 +1,45 @@
-<div ng-include="'components/navbar/navbar.html'"></div>
-
-<header class="hero-unit" id="banner">
-  <div class="container">
-    <h1>'Allo, 'Allo!</h1>
-    <p class="lead">Kick-start your next web app with Angular Fullstack</p>
-    <img src="assets/images/yeoman.png" alt="I'm Yeoman">
-  </div>
-</header>
+<!--<div ng-include="'components/navbar/navbar.html'"></div>-->
 
 <div class="container">
+  
+  
   <div class="row">
     <div class="col-lg-12">
-      <h1 class="page-header">Features:</h1>
-      <ul class="nav nav-tabs nav-stacked col-md-4 col-lg-4 col-sm-6" ng-repeat="thing in awesomeThings">
-        <li><a href="#" tooltip="{{thing.info}}">{{thing.name}}<button type="button" class="close" ng-click="deleteThing(thing)">&times;</button></a></li>
+      <h1 class="page-header">Stocks:</h1>
+      <ul class="list-inline" >
+        <li ng-repeat="stock in ctrl.stocks" class="stock-list-item col-xs-12 col-sm-4">
+          <p>{{ stock.symbol }}</p><button type="button" class="close" ng-click="ctrl.deleteStock(stock)">&times;</button>
+        </li>
       </ul>
     </div>
   </div>
 
-  <form class="thing-form">
+  <form class="stock-form" ng-submit="ctrl.addStock()" name="form" novalidate>
     <label>Syncs in realtime across clients</label>
-    <p class="input-group">
-      <input type="text" class="form-control" placeholder="Add a new thing here." ng-model="newThing">
+    <div class="input-group">
+      <input type="text" class="form-control" name="symbol" unique required ng-maxlength="5" placeholder="Add a new stock symbol here." ng-model="ctrl.newStock">
       <span class="input-group-btn">
-        <button type="submit" class="btn btn-primary" ng-click="addThing()">Add New</button>
+        <button type="submit" class="btn btn-primary" ng-disabled="form.$invalid">Add New</button>
       </span>
-    </p>
+    </div>
+    <div ng-messages="form.symbol.$error" ng-if="form.symbol.$dirty">
+      <div ng-message="required">
+        Your value is empty
+      </div>
+      <div ng-message="maxlength">
+        Your field is too long
+      </div>
+      <div ng-message="unique">
+        Symbol already added
+      </div>
+    </div>
   </form>
 </div>
 
 <footer class="footer">
   <div class="container">
-      <p>Angular Fullstack v2.0.13 |
-        <a href="https://twitter.com/tyhenkel">@tyhenkel</a> |
-         <a href="https://github.com/DaftMonk/generator-angular-fullstack/issues?state=open">Issues</a></p>
+      <p>Chart Stock v0.0.0|
+        <a href="http://www.freecodecamp.com/reenan">@reenan</a> |
+         <a href="https://github.com/naneer/basejump-chart-stock-app/issues?state=open">Issues</a></p>
   </div>
 </footer>
