--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -1,11 +1,38 @@
 <!--<div ng-include="'components/navbar/navbar.html'"></div>-->
 
 <div class="container">
-  
+  <chart-stock series="ctrl.series" stocks="ctrl.stocks"></chart-stock>
+
+
+
+  <div class="row">
+    <div class="col-lg-12">
+      <form class="stock-form" ng-submit="ctrl.addStock()" name="form" novalidate>
+        <label>Syncs in realtime across clients</label>
+        <div class="input-group">
+          <input type="text" class="form-control" name="symbol" unique required ng-maxlength="5" placeholder="Add a new stock symbol here." ng-model="ctrl.newStock">
+          <span class="input-group-btn">
+            <button type="submit" class="btn btn-primary" ng-disabled="form.$invalid">Add New</button>
+          </span>
+        </div>
+        <div ng-messages="form.symbol.$error" ng-if="form.symbol.$dirty">
+          <div ng-message="required">
+            Your value is empty
+          </div>
+          <div ng-message="maxlength">
+            Your field is too long
+          </div>
+          <div ng-message="unique">
+            Symbol already added
+          </div>
+        </div>
+      </form>
+    </div>
+  </div>
   
   <div class="row">
     <div class="col-lg-12">
-      <h1 class="page-header">Stocks:</h1>
+
       <ul class="list-inline" >
         <li ng-repeat="stock in ctrl.stocks" class="stock-list-item col-xs-12 col-sm-4">
           <p>{{ stock.symbol }}</p><button type="button" class="close" ng-click="ctrl.deleteStock(stock)">&times;</button>
@@ -13,27 +40,6 @@
       </ul>
     </div>
   </div>
-
-  <form class="stock-form" ng-submit="ctrl.addStock()" name="form" novalidate>
-    <label>Syncs in realtime across clients</label>
-    <div class="input-group">
-      <input type="text" class="form-control" name="symbol" unique required ng-maxlength="5" placeholder="Add a new stock symbol here." ng-model="ctrl.newStock">
-      <span class="input-group-btn">
-        <button type="submit" class="btn btn-primary" ng-disabled="form.$invalid">Add New</button>
-      </span>
-    </div>
-    <div ng-messages="form.symbol.$error" ng-if="form.symbol.$dirty">
-      <div ng-message="required">
-        Your value is empty
-      </div>
-      <div ng-message="maxlength">
-        Your field is too long
-      </div>
-      <div ng-message="unique">
-        Symbol already added
-      </div>
-    </div>
-  </form>
 </div>
 
 <footer class="footer">
