--- a/client/index.html
+++ b/client/index.html
@@ -69,9 +69,8 @@
           <script src="app/main/main.controller.js"></script>
           <script src="app/main/main.js"></script>
           <script src="components/chart-stock/directive/chart-stock.directive.js"></script>
+          <script src="components/color/color.service.js"></script>
           <script src="components/current-date/current-date.service.js"></script>
-          <script src="components/modal/modal.service.js"></script>
-          <script src="components/navbar/navbar.controller.js"></script>
           <script src="components/socket/socket.service.js"></script>
           <script src="components/unique/unique.directive.js"></script>
           <script src="components/yql/yql.service.js"></script>
