--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -44,7 +44,7 @@
 
 <footer class="footer">
   <div class="container">
-      <p>Chart Stock v0.0.0|
+      <p>Stockio v0.0.0</p>
         <a href="http://www.freecodecamp.com/reenan">@reenan</a> |
          <a href="https://github.com/naneer/basejump-chart-stock-app/issues?state=open">Issues</a></p>
   </div>
